# multi_index

./: CMakeLists.txt  README.md  exp0.config  exp1.config  install.sh
CMakeModules/: MultiIndexHelper.cmake
data/: CMakeLists.txt  README.md
include/multi_idx/: aux_bits.hpp  linear_scan.hpp  multi_idx.hpp  multi_idx_helper.hpp  multi_idx_red.hpp  perm.hpp.cmake  simd_utils.hpp  simple_buckets_binsearch.hpp  simple_buckets_binvector.hpp  simple_buckets_binvector_split.hpp  simple_buckets_binvector_split_xor.hpp  simple_buckets_binvector_unaligned.hpp  simple_buckets_vector.hpp  triangle_buckets_binvector_split_simd.hpp  triangle_clusters_binvector_split.hpp  triangle_clusters_binvector_split_threshold.hpp  tuple_foreach.hpp  xor_buckets_binvector_split.hpp
lib/: CMakeLists.txt
scripts/: CodeGeneration.py  CodeGeneration.sh  Gen.py  Permutations.py  calcperm.cpp  calcperm.ini  exp0.R  exp1.R  extract_tweets.py  general.c  general.h  input_info.R  multi_index.R  perm_b64.h  perm_bas.c  perm_bas.h  perm_bxx.h
src/: bench_scan.cpp  bench_scan2.cpp  bench_scan3.cpp  cluster_statistics.cpp  gen_bench_data.cpp  gen_debug_data.cpp  gen_hash_file.cpp  ham_distribution.cpp  index.cpp  info.cpp  sim_hash.cpp
